# names

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
.github/workflows/: cmake.yml
include/: adjective.hpp  noun.hpp
script/: gen_vector.py
